--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <script>
+    if (window.location.pathname === "/index.html") {
+        window.location.replace("/");
+    }
+  </script>
 </head>
 <body>
+  
+
 
 <!-- Header / Home-->
 <header class="w3-display-container w3-wide bgimg" id="home">
