--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 
 
 <!-- Header / Home-->
-<header class="w3-display-container w3-wide bgimg" id="home">
+<!-- <header class="w3-display-container w3-wide bgimg" id="home">
 
-  <div class="w3-display-middle w3-text-white w3-center">
+  <div class="w3-display-middle w3-text-white w3-center gradientDark">
     <h1 class="w3-jumbo">Flávio & Jéssica</h1>
     <h2>Are getting married</h2>
     <h2><b>05.04.2025</b></h2>
   </div>
-</header>
+</header> -->
 
 <!-- Navbar (sticky bottom) -->
 <div class="w3-bottom w3-hide-small">
@@ -38,30 +38,18 @@
   </div>
 </div>
 
-<!-- About / Jane And John -->
-<div class="w3-container w3-padding-64 w3-pale-red" id="us">
-  <div class="w3-content">
-    <h1 class="w3-center w3-text-grey"><b>Flávio <i class="bi bi-heart-pulse"></i> Jéssica</b></h1>
-    <!-- <img class="w3-round bgimg3" src="/img/FJn2.jpg" style="width:100%; height: 100% ;margin:32px 0"> -->
-    <p><i>You all know us. And we all know you. We are getting married lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
-      occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-      laboris nisi ut aliquip ex ea commodo consequat.</i>
-    </p><br>
-    <p class="w3-center"><a href="#wedding" class="w3-button w3-black w3-round w3-padding-large w3-large">Wedding Details</a></p>
-  </div>
-</div>
-
 <!-- Background photo -->
 <div class="w3-display-container bgimg2">
   <div class="w3-display-middle w3-text-white w3-center">
-    <h1 class="w3-jumbo">You Are Invited</h1><br>
-    <h2>Of course..</h2>
+    <h1 class="w3-jumbo">Flávio & Jéssica</h1><br>
+    <h2>Venha comemorar conosco!</h2>
+    <h2><b>22.03.2025</b></h2>
   </div>
 </div>
 <!-- Wedding information -->
 <div class="w3-padding-64 w3-pale-red w3-center" id="wedding">
   <div class="w3-content">
-    <h1 class="w3-text-grey"><b>THE WEDDING</b></h1>
+    <h1 class="w3-text"><b>Você é nosso convidado! </b></h1>
     <div class="profile-area">
         <div class="outer-circle"><!-- ICONS - CORAÇÕES -->
             <span class="material-icons-sharp"><i class="bi bi-arrow-through-heart-fill"></i></span>
@@ -73,17 +61,30 @@
             <img class="img-container" alt="image" src="/img/FJn3.jpg">
         </div>
     </div>
+
+    <!-- About / Jane And John -->
+<div class="w3-container w3-padding-64 w3-pale-red" id="us">
+  <div class="w3-content">
+    <h1 class="w3-center w3-text"><b>Flávio <i class="bi bi-heart-pulse"></i> Jéssica</b></h1>
+    <!-- <img class="w3-round bgimg3" src="/img/FJn2.jpg" style="width:100%; height: 100% ;margin:32px 0"> -->
+    <p><i>E acima de tudo, tenham amor, pois o amor une perfeitamente todas as coisas."(Colossenses 3:13)</i></p>
+    <p><i>Com o coração cheio de gratidão a Deus, que nos uniu com Seu amor perfeito, damos um passo importante em nossa história: o dia em que diremos "sim" para uma vida inteira juntos.</i></p>
+    <p><i>Queremos compartilhar esse momento com as pessoas que fazem parte da nossa caminhada, tornando esse dia ainda mais significativo e repleto de alegria. Por isso, é com muito carinho que convidamos você para celebrar conosco o início do nosso "para sempre".</i></p><br>
+    <!-- <p class="w3-center"><a href="#wedding" class="w3-button w3-black w3-round w3-padding-large w3-large">Wedding Details</a></p> -->
+  </div>
+</div>
+
     <!-- <img class="w3-round-large" src="/img/FJn3.jpg" style="width:50%;margin:64px 0"> -->
     <div class="w3-row">
       <div class="w3-half">
-        <h2>When</h2>
-        <p>Wedding Ceremony - 2:00pm</p>
-        <p>Reception & Dinner - 5:00pm</p>
+        <h2>Quando?</h2>
+        <p>Data: 22 de Março de 2025</p>
+        <p>Horário: 10:00 am</p>
       </div>
       <div class="w3-half">
-        <h2>Where</h2>
-        <p>Some place, an address</p>
-        <p>Some where, some address</p>
+        <h2>Onde?</h2>
+        <p>Local: Auditório da igreja Batista União</p>
+        <p>Endereço: R.2 de Agosto, 175 - União, 69050-700</p>
       </div>
     </div>
   </div>
@@ -91,32 +92,12 @@
 
 <!-- RSVP section -->
 <div class="w3-container w3-padding-64 w3-pale-red w3-center w3-wide" id="rsvp">
-  <h1>HOPE YOU CAN MAKE IT!</h1>
-  <p class="w3-large">Kindly Respond By January, 2017</p>
-  <p class="w3-xlarge">
-    <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-round w3-red w3-opacity w3-hover-opacity-off" style="padding:8px 60px">RSVP</button>
-  </p>
-</div>
-
-<!-- RSVP modal -->
-<div id="id01" class="w3-modal">
-  <div class="w3-modal-content w3-card-4 w3-animate-zoom" style="padding:32px;max-width:600px">
-    <div class="w3-container w3-white w3-center">
-      <h1 class="w3-wide">CAN YOU COME?</h1>
-      <p>We really hope you can make it.</p>
-      <form>
-        <input class="w3-input w3-border" type="text" placeholder="Name(s)" name="name">
-      </form>
-      <p><i>Sincerely, John & Jane</i></p>
-      <div class="w3-row">
-        <div class="w3-half">
-          <button onclick="document.getElementById('id01').style.display='none'" type="button" class="w3-button w3-block w3-green">Going</button>
-        </div>
-        <div class="w3-half">
-          <button onclick="document.getElementById('id01').style.display='none'" type="button" class="w3-button w3-block w3-red">Can't come</button>
-        </div>
-      </div>
-    </div>
+  <h1 class="w3-xlarge">Com carinho</h1>
+  <h1 class="w3-xlarge">Jéssica e Flávio</h1>
+  <div class="w3-xlarge row">
+    <button class="col w3-button w3-round w3-red w3-opacity w3-hover-opacity-off" style="padding:8px 60px">RSVP</button>
+  
+    <button class="col w3-button w3-round w3-red w3-opacity w3-hover-opacity-off" style="padding:8px 60px">RSVP</button>
   </div>
 </div>
 
